backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: pnt-01
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 80         
      targetPort: 3000  
  type: ClusterIP
