frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: pnt-01
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 8080          # External port to expose the service
      targetPort: 80    # Port on the NGINX container
  type: ClusterIP    # Exposes the service externally using a cloud provider's load balancer
